--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quill",
+  "name": "briteai",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -42,7 +42,7 @@
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
     "next": "13.5.2",
-    "openai": "^4.23.0",
+    "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
     "prisma": "^5.3.1",
